k8s/overlays/development/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-poker
spec:
  template:
    spec:
      containers:
      - name: planning-poker
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
