k8s/overlays/development/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planning-poker
spec:
  rules:
  - host: dev.planning-poker.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: planning-poker
            port:
              name: http
  tls:
  - hosts:
    - dev.planning-poker.example.com
    secretName: planning-poker-tls-dev
